Changes
=======

1.0.5 (2018-09-19)
------------------

Bug fixes:

- The fill value for boundless reads was ignored in Rasterio versions 1-1.0.4
  but now applies (#1471).
- An invalid shortcut has been eliminated and Rasterio now produces a proper
  mask in the boundless masked read case (#1449).
- Loss of a row or column in geometry_window() and mask() has been fixed
  (#1472).

1.0.4 (2018-09-17)
------------------

Bug fixes:

- Boundless reads of datasets without a coordinate reference system have been
  fixed (#1448).
- A y-directional error in disjoint_bounds (#1459) has been fixed.
- Prevent geometries from being thrown near projection singularities (#1446).
- Missing --aws-no-sign-requests and --aws-requester-pays options added to
  the main rio command (#1460).
- Add missing bilinear, cubic spline, lanczos resampling modes for overviews
  (#1457).
- Raise ValueError if get_writer_for_driver() is called without a driver
  name.
- Windows are now frozen so that they are hashable (#1452).

Refactoring:

- Use of InMemoryRaster eliminates redundant code in the _warp module (#1427,
  #816).
- Generalize sessions to support cloud providers other than AWS (#1429).

1.0.3.post1 (2018-09-07)
------------------------

This version corrects errors made in building binary wheels for 1.0.3. There
are no bug fixes or new features in this version.

1.0.3 (2018-08-01)
------------------

Bug fixes:

- The input file handler of rio-rasterize has been changed so that it does not
  reject GeoJSON files (#1425).
- Linear rings have been added as acceptable input for rio-rasterize and other
  commands and functions (#1431).

1.0.2 (2018-07-27)
------------------

Bug fixes:

- The output of calculate_default_transform() can be fixed to output dimensions
  as well as to output resolution (#1409).
- In using rio-warp, the --src-bounds option can now override the bounds of the
  source dataset when --dimensions is used (#1419).