@@ -1,6 +1,14 @@
 Changes
 =======
 
+Next
+----
+
+Bug fixes:
+
+- We have a more general fix for the problem of filling the empty regions of
+  boundless reads (#1471).
+
 1.0.5 (2018-09-19)
 ------------------
 
